[package]
name = "checked"
version = "0.1.1"
authors = ["zeta12ti <zeta12ti@users.noreply.github.com>"]
repository = "https://github.com/zeta12ti/Checked/"
docuemntation = "https://docs.rs/checked/0.1.0/checked/"
description = "Implements a wrapper over the primitive Rust types that better indicates overflow during arithmetic."
readme = "README.md"
keywords = ["integer", "float", "checked", "overflow", "arithmetic"]
categories = ["data-structures"]
license = "MIT"

[profile.release]
lto = true

[dependencies]
