[package]
name = "checked"
version = "0.5.0"
authors = ["zeta12ti <zeta12ti@users.noreply.github.com>"]
repository = "https://github.com/zeta12ti/Checked/"
documentation = "https://docs.rs/checked"
description = "Implements a wrapper over the primitive Rust types that better indicates overflow during arithmetic."
readme = "README.md"
keywords = ["integer", "checked", "overflow", "arithmetic"]
categories = ["data-structures"]
license = "MIT"

[profile.release]
lto = true

[badges]
travis-ci = { repository = "zeta12ti/Checked", branch = "master" }
appveyor = { repository = "zeta12ti/checked", branch = "master", service = "github" }

[dependencies]
num-traits = "0.2.0"
